[package]
name = "tis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "signal", "sync"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
tower = { version = "0.5", features = ["util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
