[package]
name = "tis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
hyper = "1"
hyper-util = "0.1"
tokio = { version = "1", features = ["rt", "macros", "net", "fs", "io-util", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
tokio-util = { version = "0.7", features = ["io"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
tower-service = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
basic-toml = "0.1"
zune-jpeg = { version = "0.5", default-features = false, features = ["std", "neon"] }
zune-core = { version = "0.5", default-features = false, features = ["std"] }
jpeg-encoder = { version = "0.6", default-features = false }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
